# reverse-proxy-mcp

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DEPENDENCY_LICENSES.md  Dockerfile  EXECUTION_GUIDE.md  LICENSE  Makefile  PHASES_5-7_EXECUTION.md  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  README.md  WARP.md  deploy-podman.sh  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  supervisord.conf
.github/workflows/: build-containers.yml
data/certs/: Kempville_wildcard.crt  Kempville_wildcard.key  Wildcard_Kempville.crt  Wildcard_Kempville.key
docs/: api-reference.rst  architecture.rst  conf.py  development.rst  getting-started.rst  index.rst  mcp-reference.rst  user-guide.rst
nginx/: entrypoint.sh  nginx.conf  nginx.conf.template
scripts/: migrate_add_must_change_password.py
src/nginx_manager/: __main__.py
src/nginx_manager/api/: dependencies.py  main.py  middleware.py
src/nginx_manager/api/v1/: auth.py  backends.py  certificates.py  config.py  proxy_rules.py  users.py
src/nginx_manager/core/: __init__.py  config.py  database.py  logging.py  nginx.py  security.py
src/nginx_manager/mcp/: __main__.py  client.py  handlers.py  server.py  tools.py
src/nginx_manager/models/: __init__.py  database.py  schemas.py
src/nginx_manager/scripts/: init_security_config.py
src/nginx_manager/services/: audit.py  certificate.py  user.py
src/reverse_proxy_mcp/: __init__.py  __main__.py
src/reverse_proxy_mcp/api/: dependencies.py  main.py  middleware.py
src/reverse_proxy_mcp/api/v1/: auth.py  backends.py  certificates.py  config.py  monitoring.py  proxy_rules.py  users.py
src/reverse_proxy_mcp/api/v2/: __init__.py  matrix.py
src/reverse_proxy_mcp/core/: __init__.py  config.py  database.py  logging.py  nginx.py  security.py
src/reverse_proxy_mcp/mcp/: __init__.py  __main__.py  client.py  handlers.py  prompts.py  resources.py  server.py  tools.py
src/reverse_proxy_mcp/models/: __init__.py  database.py  schemas.py
src/reverse_proxy_mcp/scripts/: init_security_config.py
src/reverse_proxy_mcp/services/: audit.py  certificate.py  metrics.py  user.py
tests/: conftest.py  test_api_v2_matrix.py  test_auth.py  test_backends.py  test_certificates.py  test_integration.py  test_mcp.py  test_monitoring.py  test_nginx.py  test_timezones.py
webui/: pubspec.yaml
webui/lib/: main.dart  main_new.dart  main_stable.dart
webui/lib/config/: app_config.dart
webui/lib/models/: models.dart
webui/lib/providers/: auth_provider.dart  backend_provider.dart  other_providers.dart
webui/lib/screens/: audit_screen.dart  backends_screen.dart  certificates_screen.dart  dashboard_screen.dart  login_screen.dart  rules_screen.dart  users_screen.dart
webui/lib/services/: api_service.dart  storage_service.dart
webui/lib/widgets/: app_drawer.dart  password_change_dialog.dart
webui/test/: widget_test.dart
webui/test/providers/: auth_provider_test.dart  auth_provider_test.mocks.dart  backend_provider_test.dart  backend_provider_test.mocks.dart
webui/test/screens/: login_screen_test.dart  login_screen_test.mocks.dart
