[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reverse-proxy-mcp"
version = "0.1.0"
description = "Containerized reverse proxy management system with REST API, MCP server, and Flutter WebUI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [{name = "Bryan Kemp", email = "bryan@kempville.com"}]
keywords = ["reverse-proxy", "nginx", "api", "mcp", "containerized", "proxy-management"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.15.0",
    "pydantic[email]>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.1.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.3",
    "requests>=2.32.3",
    "mcp>=1.3.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.15.0",
    "black>=24.12.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "types-requests>=2.32.0",
    "pre-commit>=4.0.0",
    "sphinx>=8.1.0",
    "sphinx-rtd-theme>=2.1.0",
    "myst-parser>=4.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".venv", "venv", "__pycache__", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ASYNC", "S", "B"]
ignore = ["B008", "S104", "S105", "S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "docker: Docker container tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
